

[package]
name = "keygen"
version = "0.1.0"
authors = ["Xuming Zeng <xsznix@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.7.3"
getopts = "0.2.21"
rayon = "1.3.1"
num_cpus = "1.13.0"
quanta = "0.9.3"
itertools = "0.10.2"

[profile.dev]
opt-level = 3
debug = true
features = ["func_timer"]

[profile.release]
lto = "fat"
codegen-units = 1
features = ["func_timer"]

[features]
func_timer = []
