

[package]
name = "keygen"
version = "0.1.0"
authors = ["Xuming Zeng <xsznix@gmail.com>"]
edition = "2021"
rust-version = "1.76.0"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
rand = "0.7.3"
getopts = "0.2.21"
rayon = "1.5.2"
num_cpus = "1.13.0"
quanta = "0.9.3"
itertools = "0.10.2"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
serde-big-array = "0.3.2"
serde_derive = "1.0.136"
chrono = "0.4.19"
#strum = "0.21"
#strum_macros = "0.21"
#phf = { version = "0.10", default-features = false }
lazy_static = "1.4.0"
jwalk = "0.6.0"
#hashbrown = { version = "0.12.1", features = ["serde", "rayon"]}
#flurry = "0.4.0"
#dashmap = { version = "5.3.3", features = ["serde", "rayon"]} 
serde_arrays = "0.1.0"

[profile.dev]
opt-level = 3
debug = true
features = ["func_timer"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
features = ["func_timer"]
panic = "abort"
incremental = true

[features]
func_timer = []
log_benchmark = []
log_run = []

[build-dependencies]
build-data = "0.1.3"